# DatasetCreator

./: .gitignore  CMakeLists.txt  GUI_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION.md  PHASE2_METADATA_EDITING_SUMMARY.md  PHASE3_SUBSET_MANAGEMENT_SUMMARY.md  PHASE4_ADVANCED_WORKFLOW_SUMMARY.md  PHASE5_VISUAL_ANALYTICS_SUMMARY.md  QUICKSTART.md  README.md  integration_test.sh  test_cli.cpp  test_gui_import.cpp  test_metadata.cpp  test_subsets.cpp
src/: main.cpp
src/core/: Dataset.cpp  Dataset.h  DatasetSample.cpp  DatasetSample.h  Metadata.cpp  Metadata.h  PluginInterface.h
src/gui/: AutoSplitDialog.cpp  AutoSplitDialog.h  DatasetTreeModel.cpp  DatasetTreeModel.h  DatasetView.cpp  DatasetView.h  ExportDialog.cpp  ExportDialog.h  FileImportDialog.cpp  FileImportDialog.h  KFoldDialog.cpp  KFoldDialog.h  MainWindow.cpp  MainWindow.h  MetadataEditor.cpp  MetadataEditor.h  SamplePreview.cpp  SamplePreview.h  SplitCommand.h  SubsetDialog.cpp  SubsetDialog.h  SubsetStatsWidget.cpp  SubsetStatsWidget.h
src/managers/: ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  MetadataManager.cpp  MetadataManager.h  ProjectManager.cpp  ProjectManager.h
src/plugins/: PluginManager.cpp  PluginManager.h
src/plugins/readers/: AudioReader.cpp  AudioReader.h  CSVReader.cpp  CSVReader.h  ImageReader.cpp  ImageReader.h  TextReader.cpp  TextReader.h
src/plugins/writers/: CSVWriter.cpp  CSVWriter.h  JSONLWriter.cpp  JSONLWriter.h  JSONWriter.cpp  JSONWriter.h
src/utils/: FileUtils.cpp  FileUtils.h
test_data/: sample.csv  sample1.txt  sample2.txt  sample3.md
tests/: CMakeLists.txt
